[package]
name = "rtm-macros"
version = "0.0.2"
rust-version = "1.56.0"
edition = "2021"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rtm-rs/rtm-macros"
homepage = "https://rtm-rs.org"
documentation = "https://docs.rs/rtm-macros"
description = """
Rust Type Mapper (RTM) crate rtm-macros.
"""
categories = [
    "database",
    "asynchronous",
]
keywords = ["async", "orm", "cqrs", "http", "sql"]
autoexamples = false

[lib]
name = "rtm_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
anyhow = "1.0.57"
proc-macro2 = "1.0"
quote = "1"
# rtm = { package = "rtm-rs", version = "0" }
syn = { version = "1.0.84", features = ["full", "parsing", "extra-traits", "proc-macro", "visit", "visit-mut"] }
thiserror = "1.0.30"

[dev-dependencies]
rtm = { package = "rtm-rs", path = "./../" }
rtm-devtools = { path = "./../rtm-devtools" }
macrotest = "1.0.8"
aquamarine = "0.1.11"
criterion = { version = "0.3", features = ["html_reports"] }
futures = "0.3"
futures-timer = "3"
mockall = "0.11"
trybuild = "1"

[features]
# Nothing by default
default = []
ci = []

[profile.bench]
opt-level = 3
lto = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
